[package]
name = "reimv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
image = "0.24.5"
resvg = "0.34.0"
nix = { version = "0.26.2", default-features = false, features = ["poll"] }

wayrs-client = "0.10"
wayrs-protocols = { version = "0.10", features = ["xdg-shell", "viewporter", "fractional-scale-v1", "xdg-decoration-unstable-v1"] }
wayrs-utils = { version = "0.6.0", features = ["seats", "shm_alloc", "cursor", "keyboard"] }

[profile.release]
lto = "thin"
