[package]
name = "reimv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
image = "0.24"
libc = "0.2"
resvg = "0.36"
wayrs-client = "1.0"
wayrs-protocols = { version = "0.13", features = [
  "xdg-shell",
  "viewporter",
  "fractional-scale-v1",
  "xdg-decoration-unstable-v1",
  "pointer-gestures-unstable-v1",
  "single-pixel-buffer-v1",
] }
wayrs-utils = { version = "0.14", features = [
  "seats",
  "shm_alloc",
  "cursor",
  "keyboard",
] }

[profile.release]
lto = "thin"
